Fixed overflow issue in connect result set.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -511,6 +511,8 @@
   display: inline-block;
   position: absolute;
   left: 60px;
+  height: 35px;
+  overflow: hidden;
 }
 
 .results_container .profile.active:hover .close_hint {
